@@ -118,6 +118,8 @@ extern time_t slurm_mktime(struct tm *tp)
 	time_t rc;
 	slurm_mutex_lock(&time_lock);
 	_init();
+	/* Force tm_isdt to -1. */
+	tp->tm_isdst = -1;
 	rc = mktime(tp);
 	slurm_mutex_unlock(&time_lock);
 	return rc;
